--- a/Katalogi.csproj
+++ b/Katalogi.csproj
@@ -33,14 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Eavesdrop">
+      <HintPath>..\..\Tanji\Tanji v1.4.390\Eavesdrop.dll</HintPath>
+    </Reference>
     <Reference Include="FlashInspect">
-      <HintPath>..\..\..\..\Tanji\Tanji v1.4.390\FlashInspect.dll</HintPath>
+      <HintPath>..\..\Tanji\Tanji v1.4.390\FlashInspect.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\PublikFurni\PublikFurni\bin\Debug\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\Tanji\Tanji v1.4.390\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Sulakore">
-      <HintPath>..\..\..\..\Tanji\Tanji v1.4.390\Sulakore.dll</HintPath>
+      <HintPath>..\..\Tanji\Tanji v1.4.390\Sulakore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,7 +57,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Tangine">
-      <HintPath>..\..\..\..\Tanji\Tanji v1.4.390\Tangine.dll</HintPath>
+      <HintPath>..\..\Tanji\Tanji v1.4.390\Tangine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
