--- a/Katalogi.csproj
+++ b/Katalogi.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Katalogi</RootNamespace>
     <AssemblyName>Katalogi</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,17 +34,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Eavesdrop">
-      <HintPath>..\..\Tanji\Tanji v1.4.390\Eavesdrop.dll</HintPath>
-    </Reference>
-    <Reference Include="FlashInspect">
-      <HintPath>..\..\Tanji\Tanji v1.4.390\FlashInspect.dll</HintPath>
+    <Reference Include="Flazzy">
+      <HintPath>..\..\..\Documents\HTools\Tanji\Tanji v1.4.1110\Flazzy.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\Tanji\Tanji v1.4.390\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Sulakore">
-      <HintPath>..\..\Tanji\Tanji v1.4.390\Sulakore.dll</HintPath>
+    <Reference Include="Sulakore, Version=8.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Documents\HTools\Tanji\Tanji v1.4.1110\Sulakore.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -56,24 +55,24 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tangine">
-      <HintPath>..\..\Tanji\Tanji v1.4.390\Tangine.dll</HintPath>
+    <Reference Include="Tangine, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Documents\HTools\Tanji\Tanji v1.4.1110\Tangine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Readers\CatalogueTabReader.cs" />
-    <Compile Include="Readers\CatalogueItemReader.cs" />
-    <Compile Include="Readers\CataloguePageReader.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Habbo\HCatalogItem.cs" />
+    <Compile Include="Habbo\HCatalogTab.cs" />
+    <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainFrm.Designer.cs">
+      <DependentUpon>MainFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainFrm.resx">
+      <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,7 +82,9 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Habbo\HCatalogPage.cs" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
